# Human-Dream-Dataset-for-BCI-and-Simulation-Research

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  STATEMENT.md  pyproject.toml
.github/workflows/: last-updated.yml
analysis/: __init__.py  dream_analyzer.py
bot/: __init__.py  config.py  handlers.py  main.py
bot/prompts/: dream_analysis.txt
bot/services/: __init__.py  analyzer.py  asr.py  llm.py
dataset/: dream_catalog.md  patterns_summary.md
dataset/raw_examples/: example_01.md  example_02.md  example_03.md  example_04.md  example_05.md
docs/: HYPOTHESIS.md  RECOMMENDED_BOOKS.md  RECORDING_GUIDE.md
tests/: __init__.py  test_bot_services.py
